--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chalkedgoose/ember-native-modal.git"
+  },
   "license": "MIT",
   "author": "",
   "directories": {
@@ -20,18 +23,18 @@
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
+    "prepack": "ember ts:precompile",
+    "postpack": "ember ts:clean",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each",
-    "prepack": "ember ts:precompile",
-    "postpack": "ember ts:clean"
+    "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "ember-auto-import": "^2.6.1",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-typescript": "^5.2.1",
-    "ember-auto-import": "^2.6.1",
     "ember-modifier": "^4.1.0"
   },
   "devDependencies": {
@@ -41,8 +44,11 @@
     "@embroider/test-setup": "^2.1.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@tsconfig/ember": "^2.0.0",
     "@types/ember": "^4.0.3",
+    "@types/ember-qunit": "^6.1.1",
+    "@types/ember-resolver": "^9.0.0",
     "@types/ember__application": "^4.0.5",
     "@types/ember__array": "^4.0.3",
     "@types/ember__component": "^4.0.13",
@@ -61,8 +67,6 @@
     "@types/ember__test": "^4.0.1",
     "@types/ember__test-helpers": "^2.9.1",
     "@types/ember__utils": "^4.0.2",
-    "@types/ember-qunit": "^6.1.1",
-    "@types/ember-resolver": "^9.0.0",
     "@types/qunit": "^2.19.5",
     "@types/rsvp": "^4.0.4",
     "babel-eslint": "^10.1.0",
@@ -91,6 +95,7 @@
     "prettier": "^2.8.4",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
+    "release-it": "^15.5.0",
     "typescript": "^5.0.4",
     "webpack": "^5.75.0"
   },
@@ -100,10 +105,28 @@
   "engines": {
     "node": "14.* || 16.* || >= 18"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "ember": {
     "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "release-it": {
+    "plugins": {
+      "@release-it-plugins/lerna-changelog": {
+        "infile": "CHANGELOG.md",
+        "launchEditor": true
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
+    }
   }
 }
