--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-typescript": "^5.2.1",
-    "ember-modifier": "^4.1.0"
+    "ember-modifier": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
